test/errors/offsets_error/zs/function_error.zs
package function_error;

struct Holder
{
    uint32 offset;
};

struct Test
{
    Holder holder;

getHolderField().offset:
    uint32 array[];

    function Holder getHolderField()
    {
        return holder;
    }
};
